--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1058,3 +1058,7 @@
  STATE_1057: "Northern Santa Cruz"
  STATE_1058: "ELZN"
  STATE_1059: "Singapore"
+ STATE_1060: "Aden"
+ STATE_1061: "South Tabuk"
+ STATE_1062: "Ha'il"
+ STATE_1063: "Narjan"
