--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1062,3 +1062,6 @@
  STATE_1061: "South Tabuk"
  STATE_1062: "Ha'il"
  STATE_1063: "Narjan"
+ STATE_1064: "Judah"
+ STATE_1065: "Al-Muthana"
+ STATE_1066: "Maysan"
